changed some order and did some tests

--- a/configure.ini
+++ b/configure.ini
@@ -9,7 +9,7 @@
 # Comment starts with #
 
 # 1. Define Road Parameters
-Road_Id = 1			# Unique Id for the simulation 
+Road_Id = 1			# Unique Id for the simulation
 Road_Length = 30
 Road_Width = 5
 Road_Signal = 15
@@ -51,13 +51,15 @@ Bus BLUE
 
 Pass 15				# Let the simulation keep running for 15 seconds
 
+
+Signal GREEN
 # Now below vehicles enter the road
 Car GREEN
 bike BLUE
 Truck GREEN
 Bus BLUE
 
+Pass 15
 # Turn the signal green
-Signal GREEN
 
 END			# If signal is GREEN, end should wait till road is clear
