changes to main can be ignored

--- a/configure.ini
+++ b/configure.ini
@@ -44,10 +44,10 @@ START
 Signal RED			# Make the signal RED
 
 # Send vehicles with given types on the road (one per second)
-Car GREEN
-bike BLUE 3 1
-bike GREEN 2 4
-Bus BLUE
+Car RED
+bike BLUE
+Truck GREEN 3 3
+Bus WHITE
 
 Pass 15				# Let the simulation keep running for 15 seconds
 
