created working modular code

--- a/configure2.ini
+++ b/configure2.ini
@@ -22,7 +22,7 @@ Default_Acceleration = 1	# Increase in speed per second
 Vehicle_Type = Car		# A new vehicle class will start with a type field
 Vehicle_Length = 2
 Vehicle_Width = 2
-Vehicle_MaxSpeed = 1
+Vehicle_MaxSpeed = 2
 Vehicle_Acceleration = 1
 
 Vehicle_Type = bike		# The first character will be used as the symbol for printing
@@ -37,6 +37,12 @@ Vehicle_Type = Truck
 Vehicle_Length = 4
 Vehicle_Width = 2
 
+Vehicle_Type = Ferrari
+Vehicle_Length = 2
+Vehicle_Width = 2
+Vehicle_MaxSpeed = 6
+Vehicle_MaxAcceleration = 3
+
 # Definitions over
 # 4. Start the simulation
 START
@@ -47,11 +53,11 @@ Signal RED			# Make the signal RED
 Car RED
 bike BLUE
 Truck GREEN 3
-Bus WHITE 
+Ferrari WHITE 
 Truck BLUE 2
 bike RED
 
-Pass 18				# Let the simulation keep running for 15 seconds
+Pass 5				# Let the simulation keep running for 15 seconds
 
 
 Signal GREEN
