--- a/configure.ini
+++ b/configure.ini
@@ -49,14 +49,14 @@ bike BLUE
 Truck GREEN 3
 Bus WHITE 
 Truck BLUE 2
+bike green 3
 bike RED
 
-Pass 18				# Let the simulation keep running for 15 seconds
+			# Let the simulation keep running for 15 seconds
 
 
-Signal GREEN
 # Now below vehicles enter the road
-Car GREEN
+Car GREEN 
 bike BLUE
 Truck GREEN
 Bus BLUE
